test/cases/parser/TraitInvalidName.errors
TraitInvalidName.b:5:15: Syntax error (invalid trait name: must be Copy, Default, Drop or Move)
